[package]
name = "arty"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arty"
path = "src/main.rs"

[dependencies]
noise = "0.9"
libc  = "0.2"
png            = "0.17"
jpeg-decoder   = "0.3"
rustls         = { version = "0.23", default-features = false, features = ["ring", "tls12", "std"] }
webpki-roots   = "0.26"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true

[profile.miyoo]
inherits  = "release"
panic     = "abort"
strip     = true

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.rusqlite]
version = "0.31"
features = ["bundled"]

[dependencies.sha2]
version = "0.10"

[dependencies.bincode]
version = "1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.log]
version = "0.4"

[dependencies.env_logger]
version = "0.11"

[[bin]]
name = "api"
path = "src/api/main.rs"
